# swagger.json
@@ -325,13 +325,13 @@
           "Plant Information"
         ],
         "description": "Returns all plant descriptions from the database.",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -342,64 +342,41 @@
         "description": "Stores a plant description in the database.",
         "parameters": [
           {
-            "name": "obj",
+            "name": "body",
             "in": "body",
-            "description": "The plant description to add to the database.",
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "type": "string",
-                  "example": "Plant Name"
+                "NamePlant": {
+                  "example": "any"
                 },
-                "category": {
-                  "type": "string",
-                  "example": "Plant Category"
+                "Description": {
+                  "example": "any"
                 },
-                "description": {
-                  "type": "string",
-                  "example": "A lengthy description."
+                "Type_of_tree": {
+                  "example": "any"
                 },
-                "tips": {
-                  "type": "array",
-                  "example": [
-                    "tip 1",
-                    "tip 2"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                "optimalSpacing": {
-                  "type": "number",
-                  "example": 200
-                },
-                "optimalDirt": {
-                  "type": "string",
-                  "example": "Dirt properties and conditions"
-                },
-                "avgGrowHeight": {
-                  "type": "number",
-                  "example": 10
+                "gender_of_tree": {
+                  "example": "any"
                 }
-              },
-              "required": [
-                "name",
-                "category",
-                "description"
-              ]
+              }
             }
           }
         ],
-        "responses": {},
-        "security": [
-          {
-            "oAuth": []
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
-        ]
+        }
       }
     },
-    "/plants/{plantId}": {
+    "/plants/{plantid}": {
       "get": {
         "tags": [
           "Plant Information"
@@ -407,15 +384,26 @@
         "description": "Returns one plant description from the database.",
         "parameters": [
           {
-            "name": "plantId",
+            "name": "plantid",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "The plant ID for the database to retrieve."
+            "type": "string"
           }
         ],
-        "responses": {}
-      },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/plants/{plantId}": {
       "put": {
         "tags": [
           "Plant Information"
@@ -426,65 +414,41 @@
             "name": "plantId",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "The plant description ID for the database to update."
+            "type": "string"
           },
           {
-            "name": "obj",
+            "name": "body",
             "in": "body",
-            "description": "The updated plant description.",
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "type": "string",
-                  "example": "Plant Name"
+                "NamePlant": {
+                  "example": "any"
                 },
-                "category": {
-                  "type": "string",
-                  "example": "Plant Category"
+                "Description": {
+                  "example": "any"
                 },
-                "description": {
-                  "type": "string",
-                  "example": "A lengthy description."
+                "Type_of_tree": {
+                  "example": "any"
                 },
-                "tips": {
-                  "type": "array",
-                  "example": [
-                    "tip 1",
-                    "tip 2"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                "optimalSpacing": {
-                  "type": "number",
-                  "example": 200
-                },
-                "optimalDirt": {
-                  "type": "string",
-                  "example": "Dirt properties and conditions"
-                },
-                "avgGrowHeight": {
-                  "type": "number",
-                  "example": 10
+                "gender_of_tree": {
+                  "example": "any"
                 }
-              },
-              "required": [
-                "name",
-                "category",
-                "description"
-              ]
+              }
             }
           }
         ],
-        "responses": {},
-        "security": [
-          {
-            "oAuth": []
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
-        ]
+        }
       },
       "delete": {
         "tags": [
@@ -496,16 +460,20 @@
             "name": "plantId",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "The plant description ID for the database to delete."
+            "type": "string"
           }
         ],
-        "responses": {},
-        "security": [
-          {
-            "oAuth": []
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
-        ]
+        }
       }
     },
     "/user/": {
